fixed spacing in contact form

--- a/styles.css
+++ b/styles.css
@@ -304,6 +304,7 @@ line-height: 52px;
 text-align: center;
 justify-content: center;
 padding-left: 20px;
+margin-top: 20px;
 
 color: #172B4D;
 }
